# Algoritmos-y-Estructura-de-Datos-2

./: .gitignore  README.md
Mauro/: Apuntes Complejidad Algoritmica.docx  atom guia.docx
Mauro/Labo/: Apuntes memoria dinamica.docx
Mauro/Practica/: apuntes-practica.tad  caballitoFutbolTad.tad  practica1Resolucion.tad
Victor/Labo/Sandbox/: CMakeLists.txt  main.cpp
Victor/Labo/Sandbox/src/: Juego.cpp  Recordatorios.cpp  SistemaDeMensajes.h
Victor/Labo/Sandbox/tests/: test_juego.cpp  test_recordatorios.cpp
Victor/Labo/ejercitacion_compilacion_testing/: CMakeLists.txt
Victor/Parciales/: p1.tad
Victor/Parciales/Parcial4/: EJ.tad  Parcial4.tad  Parcial42.tad
Victor/Parciales/parcial4/: 1ro2018.tad  2do2017.tad  2do2018.tad
Victor/Practica/: practica1.tad
Victor/Practica/Clase Practica/: File.tad  File2.tad
Victor/Practica/Clases Pre Parcial/: claseP01.tad  claseP02P03.tad  maquetaTP1.tad
Victor/Practica/Examenes/: parcial3.tad
Victor/Practica/Notas/: consultasPreParcial.tad  notasP01.tad  notasTP.tad  p02.tad  p03.tad  tecnicosADomicilio.tad
Victor/Practica/Parciales/: parcial3.tad
Victor/Practica/Practica01/: ejParcial.tad  practica1.tad
Victor/Practica/Practica02/: ejercicio11.tad
Victor/Practica/TP/: Entrega01.tad  contact.tad  tp_1_parte1.tad  tp_1_parte2.tad  tp_3.tad
Victor/Recuperatorio 1/: item2.tad  recu.tad  recu2.tad  recu3.tad
Victor/Recuperatorio 1/Practica 1/: guia.tad  recus.tad
Victor/Recuperatorio 2/: claseP-mañana.tad  consulta.tad  guia.tad  guiaDC.tad  sorting.tad
Victor/TP/: pacalgo2.tad  tp3.tad  tp_3.tad
(+115 files in other folders)
